# ministag

./: .gitignore  LICENSE  README.md  README.rst  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  tox.yml
ministag/: __init__.py  __main__.py  config.py  evol.py  init.py  rheology.py  solver.py  stokes.py
src/ministag/: __init__.py  __main__.py  config.py  init.py  rheology.py  stokes.py
tests/: conftest.py  test_command.py
