[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ministag"
version = "0.1.0"
description = "2D infinite-Prandtl convection code"
readme = "README.md"
authors = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
    {name = "Stéphane Labrosse"},
]
maintainers = [
    {name = "Adrien Morison", email = "adrien.morison@gmail.com"},
]
license = {file = "LICENSE"}
urls = {homepage = "https://github.com/StagPython/ministag"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.8",
    "loam>=0.8.0,<0.9.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.scripts]
ministag = "ministag.__main__:main"

[tool.setuptools.packages.find]
include = ["ministag"]
namespaces = false

[tool.setuptools.package-data]
ministag = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "h5py.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.5",
]
