[metadata]
name = ministag
version = 0.1.0

description = 2D convection code
long_description = file: README.rst

author = Adrien Morison, Stéphane Labrosse

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
packages =
    ministag
install_requires =
    h5py>=3.0
    numpy>=1.19
    scipy>=1.5
    matplotlib>=3.3
    loam>=0.7.0,<0.8.0

[options.entry_points]
console_scripts =
    ministag = ministag.__main__:main
